# googletest_primary_study

./: CMakeLists.txt
include/: MockUser.h  User.h
src/: main.cpp
